--- a/force-app/main/default/layouts/Medical_Facility__c-Medical Facility Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Medical_Facility__c-Medical Facility Layout.layout-meta.xml
@@ -10,6 +10,10 @@
                 <behavior>Required</behavior>
                 <field>Name</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Required</behavior>
+                <field>Type__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
