--- a/force-app/main/default/layouts/Medical_Facility__c-Medical Facility Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Medical_Facility__c-Medical Facility Layout.layout-meta.xml
@@ -11,7 +11,7 @@
                 <field>Name</field>
             </layoutItems>
             <layoutItems>
-                <behavior>Required</behavior>
+                <behavior>Edit</behavior>
                 <field>Type__c</field>
             </layoutItems>
         </layoutColumns>
