--- a/force-app/main/default/layouts/Person__c-Doctor Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Person__c-Doctor Layout.layout-meta.xml
@@ -23,6 +23,10 @@
                 <field>RecordTypeId</field>
             </layoutItems>
             <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Specialization__c</field>
+            </layoutItems>
+            <layoutItems>
                 <behavior>Required</behavior>
                 <field>Personal_ID_Number__c</field>
             </layoutItems>
@@ -106,7 +110,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00h5E000002FBgu</masterLabel>
+        <masterLabel>00h5E000002FDCh</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
