change required to false and add default value

--- a/force-app/main/default/layouts/Medical_Facility__c-Medical Facility Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Medical_Facility__c-Medical Facility Layout.layout-meta.xml
@@ -27,7 +27,7 @@
                 <field>Building_number__c</field>
             </layoutItems>
             <layoutItems>
-                <behavior>Required</behavior>
+                <behavior>Edit</behavior>
                 <field>Country__c</field>
             </layoutItems>
             <layoutItems>
